--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 }
 
 body, html {
-    background-color: black;
+    background-color: black
 }
 
 .header {
@@ -18,18 +18,25 @@ body, html {
     margin: 0 10px;
     text-decoration: none;
     color: white;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    font-size: 20px;
 }
 
 .resume a {
     padding: 8px 16px;
-    border: 1px solid #000;
+    background: linear-gradient(90deg, #b16cea, #ff6566 50%, #ffa74c);
     border-radius: 5px;
     text-decoration: none;
     color: white;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    font-size: 20px;
 }
 
 .logo {
     text-decoration: none;
     color: white;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Shadows into Light', cursive;
+    font-size: 30px;
 }
