--- a/css/about.css
+++ b/css/about.css
@@ -1,17 +1,3 @@
-.loader {
-    position: fixed;
-    inset: 0;
-    background: #000;
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    opacity: 0;
-    pointer-events: none;
-    transition: opacity 0.4s ease;
-}
-
-.loader.show {
-    opacity: 1;
-    pointer-events: all;
+.about-me-hero {
+        
 }
