--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,52 @@
-body {
-    height: 100vh;
+* {
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    background-color: white;
+}
+
+.header {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    background: linear-gradient(135deg, #ff9a9e, #fad0c4);
-    font-family: 'Poppins', sans-serif;
+    justify-content: space-between;
+    padding: 10px;
+    margin: 10px;
 }
 
-.love-text {
-    font-size: 3rem;
-    text-align: center;
-    color: #fff;
-    padding: 30px 40px;
-    border-radius: 20px;
-    background: rgba(255, 255, 255, 0.15);
-    backdrop-filter: blur(8px);
-    box-shadow: 0 0 25px rgba(255, 105, 135, 0.8);
-    animation: heartbeat 1.5s infinite;
+.name-logo {
+    color: red;
+    position: relative;
+    text-decoration: none;
+    color: var(--bs-black);
+    font-size: 2rem;
 }
 
-/* Heartbeat animation */
-@keyframes heartbeat {
-    0% { transform: scale(1); }
-    25% { transform: scale(1.05); }
-    50% { transform: scale(1); }
-    75% { transform: scale(1.05); }
-    100% { transform: scale(1); }
+
+
+.nav-links a {
+    text-decoration: none;
+    color: var(--bs-black);
+    font-size: 20px;
+    padding: 10px;
+    margin-right: 15px;
+}
+
+.intro {
+  background: #0F172A;
+  color: #E5E7EB;
+  padding: 40px;
+}
+
+.intro h1 span {
+  color: #38BDF8;
+}
+
+.intro h2 {
+  color: #22D3EE;
+}
+
+.intro p {
+  color: #CBD5F5;
 }
