--- a/css/style.css
+++ b/css/style.css
@@ -1,88 +1,20 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins' sans-serif;
+}
+
+body, html {
+  width: 100%;
+  min-height: 100vh;
 }
 
 body {
-    background-color: white;
-}
-
-#loader-wrapper {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: #ffffff; /* Change to your brand color */
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    z-index: 9999; /* Keeps it on top of everything */
-    transition: opacity 0.5s ease;
-}
-
-/* A simple spinning circle */
-.loader {
-    border: 5px solid #f3f3f3;
-    border-top: 5px solid #3498db;
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
-    animation: spin 1s linear infinite;
-}
-
-@keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
-}
-
-/* Class to hide the loader */
-.loader-hidden {
-    opacity: 0;
-    visibility: hidden;
-}
-
-.header {
-    display: flex;
-    justify-content: space-between;
-    padding: 10px;
-    margin: 10px;
-}
-
-.name-logo {
-    color: red;
-    position: relative;
-    text-decoration: none;
-    color: var(--bs-black);
-    font-size: 2rem;
-}
-
-
-
-.nav-links a {
-    text-decoration: none;
-    color: var(--bs-black);
-    font-size: 20px;
-    padding: 10px;
-    margin-right: 15px;
-}
-
-.intro {
-  background: #0F172A;
-  color: #E5E7EB;
-  padding: 40px;
-}
-
-.intro h1 span {
-  color: #38BDF8;
-}
-
-.intro h2 {
-  color: #22D3EE;
-}
-
-.intro p {
-  color: #CBD5F5;
+  background: url('/images/anya-bg.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: scroll;
 }
