--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=LXGW+WenKai+Mono+TC&display=swap");
 *{
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: 'Poppins' sans-serif;
+  font-family: "LXGW Wenkai Mono TC", monospace;
 }
 
 body, html {
@@ -17,4 +17,59 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: scroll;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  margin: 10px;
+}
+
+.name-logo {
+  text-decoration: none;
+  margin-left: 10px;
+  margin-top: 10px;
+  color: black;
+  font-size: 2rem;
+  font-weight: 500;
+  font-style: normal;
+  letter-spacing: 1px;
+}
+
+.nav-links a {
+  font-size: 1.3rem;
+  gap: 50px;
+  text-decoration: none;
+  margin-top: 10xp;
+  margin-right: 10px;
+  letter-spacing: 1px;
+  color: black;
+  font-style: normal;
+  font-weight: 500;
+}
+
+.intro {
+  margin: 9% 0 0 6%;
+  max-width: 600px;
+}
+
+h1 {
+  margin: 15px;
+  font-size: 3rem;
+}
+.multiText {
+  color: gray;
+}
+
+h2 {
+  color: #CCCCCC;
+  margin: 15px;
+  font-size: 2rem;
+}
+
+.about-me {
+  margin: 15px;
+  font-size: 1.5rem;
 }
