--- a/css/style.css
+++ b/css/style.css
@@ -13,11 +13,9 @@ body, html {
 
 body {
   background: url('/images/anya-bg.jpg');
-  background-size: contain;
+  background-size: cover;
   background-position: bottom left;
   background-repeat: no-repeat;
-  background-attachment: scroll;
-  background-color: #e8a092;
 }
 
 .header {
@@ -37,18 +35,6 @@ body {
   font-weight: 500;
   font-style: normal;
   letter-spacing: 1px;
-}
-
-.nav-links a {
-  font-size: 1.3rem;
-  gap: 50px;
-  text-decoration: none;
-  margin-top: 10xp;
-  margin-right: 10px;
-  letter-spacing: 1px;
-  color: black;
-  font-style: normal;
-  font-weight: 500;
 }
 
 .intro {
@@ -73,4 +59,18 @@ h2 {
 .about-me {
   margin: 15px;
   font-size: 1.5rem;
+}
+
+.btn {
+  margin: 1% 0 0 7%;
+  border: 1px solid;
+  padding: 15px;
+  border-radius: 5px;
+  width: 15%;
+  background: red;
+  border-color: red;
+  color: white;
+  font-size: 20px;
+  text-decoration: none;
+  font-weight: 500px;
 }
